--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         },
 
         title: {
-          text: 'Datonikus' Highcharts scatter chart from CSV'  // EDIT to insert your chart title
+          text: 'Datonikus Highcharts scatter chart from CSV'  // EDIT to insert your chart title
         },
 
         subtitle: {
